// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Profile and Mission Components Testing MissionContainer components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-dodgerblue"
      >
        <nav
          class="d-flex navBar"
        >
          <div
            class="navBrand"
          >
            <p
              class="text-neutral-100"
            >
              Air Pollution Metrics
            </p>
          </div>
          <div>
            <a
              href="#"
            >
              <img
                alt="menu"
                height="20"
                src="open.png"
                width="20"
              />
            </a>
          </div>
        </nav>
      </header>
      <div
        class="navMenu"
      >
        <a
          href="#"
        >
          <img
            alt="menu"
            height="15"
            src="close.png"
            style="position: absolute; right: 1rem;"
            width="15"
          />
        </a>
        <ul
          style="padding-top: 1rem;"
        >
          <li
            class="nav-link"
          >
            <a
              aria-current="page"
              class="text-neutral-100 active"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="nav-link"
          >
            <a
              class="text-neutral-100"
              href="/contact"
            >
              Contact Us
            </a>
          </li>
        </ul>
        <button
          class="action-button"
          style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
          type="button"
        >
          Sign-Up for free
        </button>
      </div>
      <div
        class="container"
      >
        <section
          class="banner-section"
        >
          <div
            class="banner"
          >
            <div
              class="banner-text"
            >
              <h1
                class="text-neutral-100 primary-heading text-center"
              >
                Air pollution is the contamination of air due to the presence of substances.
              </h1>
            </div>
            <div
              class="search"
            >
              <form
                class="d-flex"
              >
                <div
                  aria-label="Search"
                  class="me-2"
                  placeholder="Find your country"
                  type="search"
                  value=""
                />
              </form>
            </div>
          </div>
        </section>
        <div>
          <div
            class="countries-heading bg-dodgerblue"
          >
            <h3
              class="text-neutral-100 p-i-100"
            >
              Countries
            </h3>
          </div>
          <div
            class="card-container"
          >
            <div
              class="card light"
            >
              <a
                href="/Albania"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/al/1024.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Albania
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  ALB
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Andorra"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ad/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Andorra
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  AND
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Austria"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/at/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Austria
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  AUT
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Belarus"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/by/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Belarus
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  BLR
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Belgium"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/be/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Belgium
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  BEL
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Bosnia and Herzegovina"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ba/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Bosnia and Herzegovina
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  BIH
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Bulgaria"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/bg/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Bulgaria
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  BGR
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Croatia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/hr/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Croatia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  HRV
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Czech Republic"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/cz/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Czech Republic
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  CZE
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Denmark"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/dk/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Denmark
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  DNK
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Estonia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ee/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Estonia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  EST
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Faroe Islands"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fo/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Faroe Islands
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  FRO
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Finland"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fi/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Finland
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  FIN
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/France"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fr/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  France
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  FRA
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Germany"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/de/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Germany
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  DEU
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Gibraltar"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gi/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Gibraltar
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  GIB
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Greece"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gr/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Greece
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  GRC
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Hungary"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/hu/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Hungary
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  HUN
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Iceland"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/is/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Iceland
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  ISL
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Ireland"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ie/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Ireland
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  IRL
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Isle of Man"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/im/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Isle of Man
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  IMN
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Italy"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/it/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Italy
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  ITA
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Latvia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lv/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Latvia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  LVA
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Liechtenstein"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/li/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Liechtenstein
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  LIE
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Lithuania"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lt/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Lithuania
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  LTU
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Luxembourg"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lu/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Luxembourg
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  LUX
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Malta"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/mt/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Malta
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  MLT
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Monaco"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/mc/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Monaco
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  MCO
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Montenegro"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/me/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Montenegro
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  MNE
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Netherlands"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/nl/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Netherlands
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  NLD
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Norway"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/no/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Norway
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  NOR
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Poland"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/pl/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Poland
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  POL
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Portugal"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/pt/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Portugal
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  PRT
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Romania"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ro/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Romania
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  ROU
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Serbia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/rs/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Serbia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  SRB
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Slovakia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/sk/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Slovakia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  SVK
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Slovenia"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/si/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Slovenia
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  SVN
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Spain"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/es/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Spain
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  ESP
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/Sweden"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/se/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Sweden
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  SWE
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Switzerland"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ch/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Switzerland
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  CHE
                </small>
              </a>
            </div>
            <div
              class="card light"
            >
              <a
                href="/Ukraine"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ua/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  Ukraine
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  UKR
                </small>
              </a>
            </div>
            <div
              class="card dark"
            >
              <a
                href="/United Kingdom"
              >
                <img
                  alt="card"
                  class="img-fluid"
                  height="140"
                  loading="lazy"
                  src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gb/512.png"
                  width="130"
                />
                <h3
                  class="country-name text-neutral-100"
                >
                  United Kingdom
                </h3>
                <small
                  class="text-neutral-100"
                >
                  ALPHA:
                   
                  GBR
                </small>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="socials-layer bg-dodgerblue"
        >
          <a
            href="https://facebook.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="facebook.png"
              width="30"
            />
          </a>
          <a
            href="https://twitter.com/Mahdi_Rezaei_AF"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="twitter.png"
              width="30"
            />
          </a>
          <a
            href="https://www.linkedin.com/in/rezaei.mahdi"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="linkedin.png"
              width="30"
            />
          </a>
          <a
            href="https://github.com/MahdiSohaily"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="github.png"
              width="30"
            />
          </a>
          <a
            href="https://instagram.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="instagram.png"
              width="30"
            />
          </a>
        </div>
        <div
          class="copyright bg-dodgerblue"
        >
          <h4
            class="text-neutral-100"
          >
            ©Mahdi Rezaei - 2022
          </h4>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-dodgerblue"
    >
      <nav
        class="d-flex navBar"
      >
        <div
          class="navBrand"
        >
          <p
            class="text-neutral-100"
          >
            Air Pollution Metrics
          </p>
        </div>
        <div>
          <a
            href="#"
          >
            <img
              alt="menu"
              height="20"
              src="open.png"
              width="20"
            />
          </a>
        </div>
      </nav>
    </header>
    <div
      class="navMenu"
    >
      <a
        href="#"
      >
        <img
          alt="menu"
          height="15"
          src="close.png"
          style="position: absolute; right: 1rem;"
          width="15"
        />
      </a>
      <ul
        style="padding-top: 1rem;"
      >
        <li
          class="nav-link"
        >
          <a
            aria-current="page"
            class="text-neutral-100 active"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="nav-link"
        >
          <a
            class="text-neutral-100"
            href="/contact"
          >
            Contact Us
          </a>
        </li>
      </ul>
      <button
        class="action-button"
        style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
        type="button"
      >
        Sign-Up for free
      </button>
    </div>
    <div
      class="container"
    >
      <section
        class="banner-section"
      >
        <div
          class="banner"
        >
          <div
            class="banner-text"
          >
            <h1
              class="text-neutral-100 primary-heading text-center"
            >
              Air pollution is the contamination of air due to the presence of substances.
            </h1>
          </div>
          <div
            class="search"
          >
            <form
              class="d-flex"
            >
              <div
                aria-label="Search"
                class="me-2"
                placeholder="Find your country"
                type="search"
                value=""
              />
            </form>
          </div>
        </div>
      </section>
      <div>
        <div
          class="countries-heading bg-dodgerblue"
        >
          <h3
            class="text-neutral-100 p-i-100"
          >
            Countries
          </h3>
        </div>
        <div
          class="card-container"
        >
          <div
            class="card light"
          >
            <a
              href="/Albania"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/al/1024.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Albania
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                ALB
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Andorra"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ad/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Andorra
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                AND
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Austria"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/at/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Austria
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                AUT
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Belarus"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/by/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Belarus
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                BLR
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Belgium"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/be/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Belgium
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                BEL
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Bosnia and Herzegovina"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ba/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Bosnia and Herzegovina
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                BIH
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Bulgaria"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/bg/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Bulgaria
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                BGR
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Croatia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/hr/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Croatia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                HRV
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Czech Republic"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/cz/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Czech Republic
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                CZE
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Denmark"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/dk/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Denmark
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                DNK
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Estonia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ee/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Estonia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                EST
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Faroe Islands"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fo/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Faroe Islands
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                FRO
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Finland"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fi/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Finland
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                FIN
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/France"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/fr/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                France
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                FRA
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Germany"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/de/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Germany
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                DEU
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Gibraltar"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gi/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Gibraltar
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                GIB
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Greece"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gr/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Greece
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                GRC
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Hungary"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/hu/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Hungary
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                HUN
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Iceland"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/is/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Iceland
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                ISL
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Ireland"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ie/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Ireland
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                IRL
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Isle of Man"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/im/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Isle of Man
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                IMN
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Italy"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/it/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Italy
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                ITA
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Latvia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lv/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Latvia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                LVA
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Liechtenstein"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/li/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Liechtenstein
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                LIE
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Lithuania"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lt/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Lithuania
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                LTU
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Luxembourg"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/lu/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Luxembourg
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                LUX
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Malta"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/mt/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Malta
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                MLT
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Monaco"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/mc/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Monaco
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                MCO
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Montenegro"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/me/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Montenegro
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                MNE
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Netherlands"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/nl/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Netherlands
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                NLD
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Norway"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/no/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Norway
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                NOR
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Poland"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/pl/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Poland
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                POL
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Portugal"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/pt/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Portugal
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                PRT
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Romania"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ro/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Romania
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                ROU
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Serbia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/rs/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Serbia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                SRB
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Slovakia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/sk/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Slovakia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                SVK
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Slovenia"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/si/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Slovenia
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                SVN
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Spain"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/es/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Spain
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                ESP
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/Sweden"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/se/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Sweden
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                SWE
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Switzerland"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ch/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Switzerland
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                CHE
              </small>
            </a>
          </div>
          <div
            class="card light"
          >
            <a
              href="/Ukraine"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/ua/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                Ukraine
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                UKR
              </small>
            </a>
          </div>
          <div
            class="card dark"
          >
            <a
              href="/United Kingdom"
            >
              <img
                alt="card"
                class="img-fluid"
                height="140"
                loading="lazy"
                src="https://raw.githubusercontent.com/djaiss/mapsicon/master/europe/gb/512.png"
                width="130"
              />
              <h3
                class="country-name text-neutral-100"
              >
                United Kingdom
              </h3>
              <small
                class="text-neutral-100"
              >
                ALPHA:
                 
                GBR
              </small>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="socials-layer bg-dodgerblue"
      >
        <a
          href="https://facebook.com/"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt=""
            height="30"
            loading="lazy"
            src="facebook.png"
            width="30"
          />
        </a>
        <a
          href="https://twitter.com/Mahdi_Rezaei_AF"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt=""
            height="30"
            loading="lazy"
            src="twitter.png"
            width="30"
          />
        </a>
        <a
          href="https://www.linkedin.com/in/rezaei.mahdi"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt=""
            height="30"
            loading="lazy"
            src="linkedin.png"
            width="30"
          />
        </a>
        <a
          href="https://github.com/MahdiSohaily"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt=""
            height="30"
            loading="lazy"
            src="github.png"
            width="30"
          />
        </a>
        <a
          href="https://instagram.com/"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt=""
            height="30"
            loading="lazy"
            src="instagram.png"
            width="30"
          />
        </a>
      </div>
      <div
        class="copyright bg-dodgerblue"
      >
        <h4
          class="text-neutral-100"
        >
          ©Mahdi Rezaei - 2022
        </h4>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing Profile and Mission Components Testing MissionContainer components 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <header
          class="bg-dodgerblue"
        >
          <nav
            class="d-flex navBar"
          >
            <div
              class="navBrand"
            >
              <p
                class="text-neutral-100"
              >
                Air Pollution Metrics
              </p>
            </div>
            <div>
              <a
                href="#"
              >
                <img
                  alt="menu"
                  height="20"
                  src="open.png"
                  width="20"
                />
              </a>
            </div>
          </nav>
        </header>
        <div
          class="navMenu"
        >
          <a
            href="#"
          >
            <img
              alt="menu"
              height="15"
              src="close.png"
              style="position: absolute; right: 1rem;"
              width="15"
            />
          </a>
          <ul
            style="padding-top: 1rem;"
          >
            <li
              class="nav-link"
            >
              <a
                aria-current="page"
                class="text-neutral-100 active"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-link"
            >
              <a
                class="text-neutral-100"
                href="/contact"
              >
                Contact Us
              </a>
            </li>
          </ul>
          <button
            class="action-button"
            style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
            type="button"
          >
            Sign-Up for free
          </button>
        </div>
        <div
          class="contact-container bg-main"
        >
          <div>
            <h1
              class="text-neutral-100"
            >
              Contact Information
            </h1>
            <p
              class="text-neutral-100"
            >
              Contact us via mail (mahdi.sohaily4030@gmail.com)
            </p>
            <p
              class="text-neutral-100"
            >
              Or click on any of the social media links below to reach me directly.
            </p>
          </div>
        </div>
        <div>
          <div
            class="socials-layer bg-dodgerblue"
          >
            <a
              href="https://facebook.com/"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="facebook.png"
                width="30"
              />
            </a>
            <a
              href="https://twitter.com/Mahdi_Rezaei_AF"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="twitter.png"
                width="30"
              />
            </a>
            <a
              href="https://www.linkedin.com/in/rezaei.mahdi"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="linkedin.png"
                width="30"
              />
            </a>
            <a
              href="https://github.com/MahdiSohaily"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="github.png"
                width="30"
              />
            </a>
            <a
              href="https://instagram.com/"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="instagram.png"
                width="30"
              />
            </a>
          </div>
          <div
            class="copyright bg-dodgerblue"
          >
            <h4
              class="text-neutral-100"
            >
              ©Mahdi Rezaei - 2022
            </h4>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <header
        class="bg-dodgerblue"
      >
        <nav
          class="d-flex navBar"
        >
          <div
            class="navBrand"
          >
            <p
              class="text-neutral-100"
            >
              Air Pollution Metrics
            </p>
          </div>
          <div>
            <a
              href="#"
            >
              <img
                alt="menu"
                height="20"
                src="open.png"
                width="20"
              />
            </a>
          </div>
        </nav>
      </header>
      <div
        class="navMenu"
      >
        <a
          href="#"
        >
          <img
            alt="menu"
            height="15"
            src="close.png"
            style="position: absolute; right: 1rem;"
            width="15"
          />
        </a>
        <ul
          style="padding-top: 1rem;"
        >
          <li
            class="nav-link"
          >
            <a
              aria-current="page"
              class="text-neutral-100 active"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="nav-link"
          >
            <a
              class="text-neutral-100"
              href="/contact"
            >
              Contact Us
            </a>
          </li>
        </ul>
        <button
          class="action-button"
          style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
          type="button"
        >
          Sign-Up for free
        </button>
      </div>
      <div
        class="contact-container bg-main"
      >
        <div>
          <h1
            class="text-neutral-100"
          >
            Contact Information
          </h1>
          <p
            class="text-neutral-100"
          >
            Contact us via mail (mahdi.sohaily4030@gmail.com)
          </p>
          <p
            class="text-neutral-100"
          >
            Or click on any of the social media links below to reach me directly.
          </p>
        </div>
      </div>
      <div>
        <div
          class="socials-layer bg-dodgerblue"
        >
          <a
            href="https://facebook.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="facebook.png"
              width="30"
            />
          </a>
          <a
            href="https://twitter.com/Mahdi_Rezaei_AF"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="twitter.png"
              width="30"
            />
          </a>
          <a
            href="https://www.linkedin.com/in/rezaei.mahdi"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="linkedin.png"
              width="30"
            />
          </a>
          <a
            href="https://github.com/MahdiSohaily"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="github.png"
              width="30"
            />
          </a>
          <a
            href="https://instagram.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="instagram.png"
              width="30"
            />
          </a>
        </div>
        <div
          class="copyright bg-dodgerblue"
        >
          <h4
            class="text-neutral-100"
          >
            ©Mahdi Rezaei - 2022
          </h4>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing Profile and Mission Components Testing MissionContainer components 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <header
          class="bg-dodgerblue"
        >
          <nav
            class="d-flex navBar"
          >
            <div
              class="navBrand"
            >
              <p
                class="text-neutral-100"
              >
                Air Pollution Metrics
              </p>
            </div>
            <div>
              <a
                href="#"
              >
                <img
                  alt="menu"
                  height="20"
                  src="open.png"
                  width="20"
                />
              </a>
            </div>
          </nav>
        </header>
        <div
          class="navMenu"
        >
          <a
            href="#"
          >
            <img
              alt="menu"
              height="15"
              src="close.png"
              style="position: absolute; right: 1rem;"
              width="15"
            />
          </a>
          <ul
            style="padding-top: 1rem;"
          >
            <li
              class="nav-link"
            >
              <a
                aria-current="page"
                class="text-neutral-100 active"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-link"
            >
              <a
                class="text-neutral-100"
                href="/contact"
              >
                Contact Us
              </a>
            </li>
          </ul>
          <button
            class="action-button"
            style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
            type="button"
          >
            Sign-Up for free
          </button>
        </div>
        <div
          class="bg-main back-container"
        >
          <button
            class="back-btn text-neutral-100"
            type="button"
          >
            <img
              alt="Back"
              class="back-icon"
              height="20"
              src="back.png"
              width="20"
            />
            Back Home
          </button>
        </div>
        <div
          class="county-details bg-main"
        >
          <div
            class="country-info"
          >
            <h1
              class="text-neutral-100"
            />
            <img
              alt="country map"
              height="200"
              src=""
              width="200"
            />
          </div>
          <div
            class="pollution-data"
          >
            <table
              class="pollution-table"
            >
              <thead>
                <tr>
                  <th
                    class="text-neutral-100"
                  >
                    #
                  </th>
                  <th
                    class="text-neutral-100"
                  >
                    Gas
                  </th>
                  <th
                    class="text-neutral-100"
                  >
                    Concentration
                  </th>
                </tr>
              </thead>
              <tbody />
            </table>
          </div>
        </div>
        <div>
          <div
            class="socials-layer bg-dodgerblue"
          >
            <a
              href="https://facebook.com/"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="facebook.png"
                width="30"
              />
            </a>
            <a
              href="https://twitter.com/Mahdi_Rezaei_AF"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="twitter.png"
                width="30"
              />
            </a>
            <a
              href="https://www.linkedin.com/in/rezaei.mahdi"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="linkedin.png"
                width="30"
              />
            </a>
            <a
              href="https://github.com/MahdiSohaily"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="github.png"
                width="30"
              />
            </a>
            <a
              href="https://instagram.com/"
              rel="noreferrer"
              target="_blank"
            >
              <img
                alt=""
                height="30"
                loading="lazy"
                src="instagram.png"
                width="30"
              />
            </a>
          </div>
          <div
            class="copyright bg-dodgerblue"
          >
            <h4
              class="text-neutral-100"
            >
              ©Mahdi Rezaei - 2022
            </h4>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <header
        class="bg-dodgerblue"
      >
        <nav
          class="d-flex navBar"
        >
          <div
            class="navBrand"
          >
            <p
              class="text-neutral-100"
            >
              Air Pollution Metrics
            </p>
          </div>
          <div>
            <a
              href="#"
            >
              <img
                alt="menu"
                height="20"
                src="open.png"
                width="20"
              />
            </a>
          </div>
        </nav>
      </header>
      <div
        class="navMenu"
      >
        <a
          href="#"
        >
          <img
            alt="menu"
            height="15"
            src="close.png"
            style="position: absolute; right: 1rem;"
            width="15"
          />
        </a>
        <ul
          style="padding-top: 1rem;"
        >
          <li
            class="nav-link"
          >
            <a
              aria-current="page"
              class="text-neutral-100 active"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="nav-link"
          >
            <a
              class="text-neutral-100"
              href="/contact"
            >
              Contact Us
            </a>
          </li>
        </ul>
        <button
          class="action-button"
          style="position: absolute; bottom: 1rem; left: 1rem; width: 160px;"
          type="button"
        >
          Sign-Up for free
        </button>
      </div>
      <div
        class="bg-main back-container"
      >
        <button
          class="back-btn text-neutral-100"
          type="button"
        >
          <img
            alt="Back"
            class="back-icon"
            height="20"
            src="back.png"
            width="20"
          />
          Back Home
        </button>
      </div>
      <div
        class="county-details bg-main"
      >
        <div
          class="country-info"
        >
          <h1
            class="text-neutral-100"
          />
          <img
            alt="country map"
            height="200"
            src=""
            width="200"
          />
        </div>
        <div
          class="pollution-data"
        >
          <table
            class="pollution-table"
          >
            <thead>
              <tr>
                <th
                  class="text-neutral-100"
                >
                  #
                </th>
                <th
                  class="text-neutral-100"
                >
                  Gas
                </th>
                <th
                  class="text-neutral-100"
                >
                  Concentration
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
      <div>
        <div
          class="socials-layer bg-dodgerblue"
        >
          <a
            href="https://facebook.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="facebook.png"
              width="30"
            />
          </a>
          <a
            href="https://twitter.com/Mahdi_Rezaei_AF"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="twitter.png"
              width="30"
            />
          </a>
          <a
            href="https://www.linkedin.com/in/rezaei.mahdi"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="linkedin.png"
              width="30"
            />
          </a>
          <a
            href="https://github.com/MahdiSohaily"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="github.png"
              width="30"
            />
          </a>
          <a
            href="https://instagram.com/"
            rel="noreferrer"
            target="_blank"
          >
            <img
              alt=""
              height="30"
              loading="lazy"
              src="instagram.png"
              width="30"
            />
          </a>
        </div>
        <div
          class="copyright bg-dodgerblue"
        >
          <h4
            class="text-neutral-100"
          >
            ©Mahdi Rezaei - 2022
          </h4>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
